--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,7 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 html
-Emotion-recognition-master/test[1-10].py
+Emotion-recognition-master/test
 Emotion-recognition-master/train
 test[1-20].py
 Emotion-recognition-master/fer2013
