얼굴 로그인 학습 데이터 dataset .gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ Emotion-recognition-master/test
 Emotion-recognition-master/train
 test[1-20].py
 Emotion-recognition-master/fer2013
+Emotion-recognition-master/dataset
