민감한 정보 .gitignore에 추가 하여 파일 분리 ( AWS DB 정보 )

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ Emotion-recognition-master/train
 test[1-20].py
 Emotion-recognition-master/fer2013
 Emotion-recognition-master/dataset
+Emotion-recognition-master/config.ini
