--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,5 @@ test[1-20].py
 Emotion-recognition-master/fer2013
 Emotion-recognition-master/dataset
 Emotion-recognition-master/config.ini
+Emotion-recognition-master/9_24_trainer
+Emotion-recognition-master/trainer
