어드민만 data 축적

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ Emotion-recognition-master/dataset
 Emotion-recognition-master/config.ini
 Emotion-recognition-master/9_24_trainer
 Emotion-recognition-master/trainer
+past_trainer
